# maestro-agent

./: .gitignore  diagnose_auth.py  diagnose_user_profile.py  pyproject.toml  requirements.txt  start_all.bat  streamlit_app.py  superset_config.py  test_auth.py  test_user_isolation.py
agent_front/: .editorconfig  .gitignore  API_DOCUMENTATION.md  AUTH_GUIDE.md  FRONTEND_QUICK_START.md  REACT_FRONTEND_PROMPT.md  README.md  api-types.ts  index.html  package-lock.json  package.json  tailwind.config.js  使用说明.md  前端认证功能说明.md  前端静态页面样例.html  启动指南.md  快速启动.bat  项目结构说明.md
agent_front/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
docs/: SKILL_INTEGRATION_GUIDE.md
intentrouter/: __init__.py  config.py  mcp_start.py
intentrouter/api/: main.py  middleware.py  schemas.py  schemas_auth.py
intentrouter/db/: __init__.py  checkpointer.py  document_loader.py  ltm_manager.py  user_manager.py  vector_store.py
intentrouter/graph/: __init__.py  main_graph.py  prompts.py  runnables.py  state.py  utils.py
intentrouter/mcp/: MCP_client.py  MCP_manager.py  (+2 more)
ops/: README.md  docker-compose.yml  init_db.sql
scripts/: init_knowledge_base.py  quick_start.md  start_mcp_filesystem.bat  start_mcp_filesystem_debug.bat  start_mcp_filesystem_noquotes.bat  测试路径.py
tests/: __init__.py  all_command_combinations.txt  benchmark_executor.py  diagnose_npx.py  install_and_test_mcp.md  test_hitl.py  test_ltm.py  test_ltm_fixed.py  test_mcp_agent.py  test_mcp_real.py  test_multiturn_conversation.py  test_planner.py  test_tool_agent.py  test_vision.py  test_vision_debug.py  test_writer.py
(+62 files in other folders)
